// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardImage snapshot renders clickable link course Image 1`] = `
<a
  className="pgn__card-wrapper-image-cap d-inline-block overflow-visible orientation"
  href="home-url"
  onClick={
    {
      "trackCourseEvent": {
        "cardId": "cardId",
        "eventName": [MockFunction segment.courseImageClicked],
        "url": "home-url",
      },
    }
  }
  tabIndex="-1"
>
  <Fragment>
    <img
      alt="Course thumbnail"
      className="pgn__card-image-cap w-100 show"
      src="banner-img-src"
    />
    <span
      className="course-card-verify-ribbon-container"
      title="You're enrolled as a verified student"
    >
      <Badge
        as="div"
        className="w-100"
        variant="success"
      >
        Verified
      </Badge>
      <img
        alt="ID Verified Ribbon/Badge"
        src="test-file-stub"
      />
    </span>
  </Fragment>
</a>
`;

exports[`CourseCardImage snapshot renders disabled link 1`] = `
<div
  className="pgn__card-wrapper-image-cap d-inline-block overflow-visible orientation"
>
  <Fragment>
    <img
      alt="Course thumbnail"
      className="pgn__card-image-cap w-100 show"
      src="banner-img-src"
    />
    <span
      className="course-card-verify-ribbon-container"
      title="You're enrolled as a verified student"
    >
      <Badge
        as="div"
        className="w-100"
        variant="success"
      >
        Verified
      </Badge>
      <img
        alt="ID Verified Ribbon/Badge"
        src="test-file-stub"
      />
    </span>
  </Fragment>
</div>
`;
